begin on select command